<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.5.7</version>
	</parent>
	<groupId>com.wcpdoc.exam</groupId>
	<artifactId>sys-parent</artifactId>
	<version>5.7.0</version>
	<name>parent</name>
	<description>父模块</description>
	<packaging>pom</packaging>

	<properties>
		<java.version>21</java.version>
	</properties>

	<modules>
		<module>sys-core</module>
		<module>sys-base</module>
		<module>sys-web</module>
		<module>sys-api</module>
		<module>sys-ex</module>
		<module>sys-cache</module>
		<module>sys-file</module>
		<module>sys-quartz</module>
		<module>sys-auth</module>
		<module>sys-notify</module>
		<module>exam-core</module>
		<module>exam-ex</module>
		<module>exam-api</module>
		<module>exam-report</module>
	</modules>
</project>
